sciama odwalona xD

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -412,13 +412,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1782540ed78f49f4af563d3d49ecad0a",
+       "model_id": "5eb6a2987b8542e0947455471eb9da0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,14 +449,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Report titanic.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
+      "Report iris.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
      ]
     }
    ],
    "source": [
     "report = sv.analyze(df)\n",
-    "report.show_html('titanic.html') "
+    "report.show_html('iris.html') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
