--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -110,57 +110,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  ____  __  _  _  ____  ____  _  _  __   \n",
-      " / ___)(  )( \\/ )(  _ \\(  __)/ )( \\(  ) v2.6.2 \n",
-      " \\___ \\ )( / \\/ \\ ) __/ ) _) ) \\/ (/ (_/\\ \n",
-      " (____/(__)\\_)(_/(__)  (__)  \\____/\\____/\n",
-      "\n",
-      " Created by Marco S. Nobile (m.s.nobile@tue.nl)\n",
-      " and Simone Spolaor (simone.spolaor@unimib.it)\n",
-      "\n",
-      " * Detected Sugeno model type\n",
-      "{'POWER': 0.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import simpful as sf\n",
-    "\n",
-    "# A simple fuzzy model describing how the heating power of a gas burner depends on the oxygen supply.\n",
-    "\n",
-    "FS = sf.FuzzySystem()\n",
-    "\n",
-    "# Define a linguistic variable.\n",
-    "S_1 = sf.FuzzySet( points=[[0, 1.],  [1., 1.],  [1.5, 0]],          term=\"low_flow\" )\n",
-    "S_2 = sf.FuzzySet( points=[[0.5, 0], [1.5, 1.], [2.5, 1], [3., 0]], term=\"medium_flow\" )\n",
-    "S_3 = sf.FuzzySet( points=[[2., 0],  [2.5, 1.], [3., 1.]],          term=\"high_flow\" )\n",
-    "FS.add_linguistic_variable(\"OXI\", sf.LinguisticVariable( [S_1, S_2, S_3] ))\n",
-    "\n",
-    "# Define consequents.\n",
-    "FS.set_crisp_output_value(\"LOW_POWER\", 0)\n",
-    "FS.set_crisp_output_value(\"MEDIUM_POWER\", 25)\n",
-    "FS.set_output_function(\"HIGH_FUN\", \"OXI**2\")\n",
-    "\n",
-    "# Define fuzzy rules.\n",
-    "RULE1 = \"IF (OXI IS low_flow) THEN (POWER IS LOW_POWER)\"\n",
-    "RULE2 = \"IF (OXI IS medium_flow) THEN (POWER IS MEDIUM_POWER)\"\n",
-    "RULE3 = \"IF (NOT (OXI IS low_flow)) THEN (POWER IS HIGH_FUN)\"\n",
-    "FS.add_rules([RULE1, RULE2, RULE3])\n",
-    "\n",
-    "# Set antecedents values, perform Sugeno inference and print output values.\n",
-    "FS.set_variable(\"OXI\", .1)\n",
-    "print (FS.Sugeno_inference(['POWER']))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
    "outputs": [
@@ -329,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -350,10 +299,10 @@
     {
      "data": {
       "text/plain": [
-       "{'death': 22.37223185338409}"
+       "{'death': 38.20351470774268}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,10 +335,12 @@
     "\n",
     "# Define the fuzzy rules\n",
     "FS.add_rules([\n",
-    "\t\"IF (pclass IS first) THEN (death IS low_probability)\",\n",
-    "\t\"IF (pclass IS third) THEN (death IS high_probability)\",\n",
+    "\t# \"IF (pclass IS first) THEN (death IS low_probability)\",\n",
+    "\t# \"IF (pclass IS third) THEN (death IS high_probability)\",\n",
+    "\n",
     "\t\"IF (sex IS female) THEN (death IS low_probability)\",\n",
     "\t\"IF (sex IS male) THEN (death IS high_probability)\",\n",
+    "\n",
     "\t\"IF (age IS young) THEN (death IS high_probability)\",\n",
     "\t\"IF (age IS old) THEN (death IS low_probability)\",\n",
     "\t])\n",
@@ -407,6 +358,79 @@
     "\n",
     "death_probability = FS.inference()\n",
     "death_probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(sex, age, pclass):\n",
+    "    sex = 0 if 'male' else 0\n",
+    "\n",
+    "    FS.set_variable(\"pclass\", pclass)\n",
+    "    FS.set_variable(\"sex\", sex)\n",
+    "    FS.set_variable(\"age\", age)\n",
+    "\n",
+    "    death_probability = FS.inference()\n",
+    "\n",
+    "    if death_probability['death'] >= 50:\n",
+    "        return 1\n",
+    "    \n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['predict'] = df.apply(lambda x: predict(x.Sex, x.Age, x.Pclass), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6557377049180327"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(df['Survived'], df['predict'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7341772151898733"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(df['Survived'], df['predict'])"
    ]
   },
   {
